; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-dlopen.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-dlopen.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTLD_NOW = common dso_local global i32 0, align 4
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i8**, i8*** %5, align 8
  %8 = getelementptr inbounds i8*, i8** %7, i64 1
  %9 = load i8*, i8** %8, align 8
  %10 = load i32, i32* @RTLD_NOW, align 4
  %11 = call i8* @dlopen(i8* %9, i32 %10)
  store i8* %11, i8** %6, align 8
  %12 = ptrtoint i8* %11 to i32
  %13 = call i32 @assert_se(i32 %12)
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @dlclose(i8* %14)
  %16 = icmp eq i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert_se(i32 %17)
  %19 = load i32, i32* @EXIT_SUCCESS, align 4
  ret i32 %19
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i8* @dlopen(i8*, i32) #1

declare dso_local i64 @dlclose(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
